k8s/project_model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-model
  template:
    metadata:
      labels:
        app: project-model
    spec:
      containers:
      - name: model
        image: xsz666/project_model:v4
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: ucloud-aliyun

---
apiVersion: v1
kind: Service
metadata:
  name: project-model
spec:
  selector:
    app: project-model
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
