k8s/project_mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-mongo
  labels:
    app: project-mongo
spec:
  ports:
    - port: 27017
      name: mongo
  selector:
    app: project-mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-mongo
spec:
  serviceName: "project-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: project-mongo
  template:
    metadata:
      labels:
        app: project-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:5.0.18
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: test-volume
          mountPath: /data/db
        command:
          - bash
          - -c
          - | 
            apt update -y && apt install telnet net-tools -y
            touch  /tmp/mongodb.log 
            mongod --bind_ip "0.0.0.0"  --fork --logpath /tmp/mongodb.log 
            mongo --eval "db.getSiblingDB('userdb').createUser({
              user: 'myusername', 
              pwd: 'mypassword', 
              roles: [{role: 'readWrite', db: 'userdb'}]
            });"
            tail -f  /tmp/mongodb.log  

      volumes:
      - name: test-volume
        emptyDir: {}
